[package]
name = "tempo-commonware-node"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
tempo-alloy = { workspace = true, features = ["reth"] }
tempo-chainspec.workspace = true
tempo-commonware-node-config.workspace = true
tempo-dkg-onchain-artifacts.workspace = true
tempo-node.workspace = true
tempo-primitives = { workspace = true, features = ["reth"] }
tempo-payload-types.workspace = true
tempo-precompiles.workspace = true
tempo-telemetry-util.workspace = true

alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-rlp.workspace = true

axum.workspace = true
bytes.workspace = true
clap.workspace = true

commonware-broadcast.workspace = true
commonware-codec.workspace = true
commonware-consensus.workspace = true
commonware-cryptography.workspace = true
commonware-macros.workspace = true
commonware-math.workspace = true
commonware-p2p.workspace = true
commonware-parallel.workspace = true
commonware-runtime = { workspace = true, features = ["external"] }
commonware-storage.workspace = true
commonware-utils.workspace = true

eyre.workspace = true
futures.workspace = true
governor.workspace = true
indexmap.workspace = true
jiff = { workspace = true, features = ["std"] }
parking_lot.workspace = true
pin-project = "1.1.10"
prometheus-client.workspace = true
rand_08.workspace = true

reth-consensus-common.workspace = true
rand_core.workspace = true
reth-ethereum.workspace = true
reth-evm.workspace = true
reth-node-builder.workspace = true
reth-node-core.workspace = true
reth-revm.workspace = true
reth-primitives-traits.workspace = true
reth-provider.workspace = true

tokio = { workspace = true, features = ["macros", "sync"] }
tracing.workspace = true
