[package]
name = "tempo-e2e"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
alloy = { workspace = true, features = [
  "genesis",
  "rpc-types",
  "signers",
  "signer-local",
  "signer-mnemonic",
  "rlp",
  "providers",
] }
alloy-evm.workspace = true
alloy-genesis.workspace = true
alloy-primitives.workspace = true

commonware-codec.workspace = true
commonware-consensus.workspace = true
commonware-cryptography.workspace = true
commonware-math.workspace = true
commonware-p2p.workspace = true
commonware-runtime = { workspace = true, features = ["external"] }
commonware-utils.workspace = true

itertools.workspace = true

eyre.workspace = true
reth-db.workspace = true
reth-ethereum = { workspace = true, features = [
  "node",
  "rpc",
  "test-utils",
  "pool",
] }
reth-network-peers.workspace = true
reth-node-builder.workspace = true
reth-node-core.workspace = true
reth-node-metrics.workspace = true
reth-rpc-builder.workspace = true

tempo-chainspec.workspace = true
tempo-dkg-onchain-artifacts.workspace = true
tempo-commonware-node.workspace = true
tempo-node.workspace = true
tempo-precompiles = { workspace = true, features = ["rpc"] }

futures.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
serde_json.workspace = true
secp256k1.workspace = true

[dev-dependencies]
commonware-consensus.workspace = true
commonware-macros.workspace = true
commonware-parallel.workspace = true
jsonrpsee = { workspace = true, features = ["ws-client", "http-client"] }
tempo-eyre.workspace = true
tracing-subscriber.workspace = true

alloy-network.workspace = true

rand_08.workspace = true

[lints]
workspace = true
