[package]
name = "tempo-payload-builder"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
tempo-chainspec.workspace = true
tempo-precompiles.workspace = true
tempo-consensus.workspace = true
tempo-evm.workspace = true
tempo-primitives = { workspace = true, features = ["reth"] }
tempo-transaction-pool.workspace = true
tempo-payload-types.workspace = true

reth-basic-payload-builder.workspace = true
reth-chainspec.workspace = true
reth-consensus-common.workspace = true
reth-engine-tree.workspace = true
reth-errors.workspace = true
reth-execution-types.workspace = true
reth-evm.workspace = true
reth-metrics.workspace = true
reth-payload-builder.workspace = true
reth-payload-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-revm.workspace = true
reth-storage-api.workspace = true
reth-transaction-pool.workspace = true
reth-trie-common.workspace = true

alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true

either.workspace = true
metrics.workspace = true
tracing.workspace = true

[features]
trie-debug = ["reth-engine-tree/trie-debug"]
