[package]
name = "tempo-payload-types"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
tempo-primitives = { workspace = true, features = ["reth-codec", "serde"] }

reth-ethereum-engine-primitives.workspace = true
reth-node-api.workspace = true
reth-payload-primitives.workspace = true
reth-primitives-traits.workspace = true

alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-rpc-types-engine.workspace = true

derive_more.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true